iisnode/HO-IT-05-3732-stderr-1761649924002.txt
Application has thrown an uncaught exception and is terminated:
D:\Kalash Sql\Needha_ERP_server-main\server.js:12673
    const billingRecord = await conn.sobject('Billing__c').create({
          ^

SyntaxError: Identifier 'billingRecord' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1486:18)
    at Module._compile (node:internal/modules/cjs/loader:1528:20)
    at Object..js (node:internal/modules/cjs/loader:1706:10)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (C:\Program Files\iisnode\interceptor.js:210:1)
